# timescales

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  timescales  timescales.py
.devcontainer/: devcontainer.json
grammar/: MetricTemporalLogic.g4
properties/: bounded_absence.py  bounded_recurrence.py  bounded_response.py  bounded_universality.py
rvtools/aerial/: Dockerfile  benchmark.sh
rvtools/dejavu/: Dockerfile  benchmark.full.sh  benchmark.sh
rvtools/monpoly/: Dockerfile  benchmark.sh
rvtools/montre/: Dockerfile  benchmark.sh
rvtools/reelay2008/: Dockerfile  benchmark.djv.sh  benchmark.dn10.sh  benchmark.dn100.sh  benchmark.rbt.sh  benchmark.sh  benchmark.untimed.sh
rvtools/rtamt/: Dockerfile  app.py  benchmark.rbt.sh  benchmark.sh
rvtools/rvbenchmark/: base.dockerfile  entrypoint.sh
scripts/: README.md  from_dejavu.py  test_by_python_monitors.py  test_future_by_python_monitors.py  test_past_by_python_monitors.py  to_monpoly.py  to_montre.py  to_robostness.py
scripts/hyperfine/: reelay2008.sh
scripts/multitime/: reelay.2008.txt
serialization/: Timescales.proto  flatbuf_reader.py
serialization/Timescales/: Message.py
smallsuite/: AbsentAQ.csv  AbsentAQ.yaml  AbsentBQR.csv  AbsentBQR.yaml  AbsentBR.csv  AbsentBR.yaml  AlwaysAQ.csv  AlwaysAQ.yaml  AlwaysBQR.csv  AlwaysBQR.yaml  AlwaysBR.csv  AlwaysBR.yaml  RecurBQR.csv  RecurBQR.yaml  RecurGLB.csv  RecurGLB.yaml  RespondBQR.csv  RespondBQR.yaml  RespondGLB.csv  RespondGLB.yaml
src/timescales/: __init__.py  cli.py  flatbuffers_reader.py  protobuf_reader.py
(+5 files in other folders)
